--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ body .wrapper {
   background-color: #7a7a7a;
   margin: 0 auto;
   background-image: url("assets/img/pattern.jpg");
+  background-size: 100% 100%;
 }
 body .wrapper .header {
   display: grid;
@@ -31,14 +32,23 @@ body .wrapper .header nav {
   border-right: 1px solid #9e9d9d;
 }
 body .wrapper .header_logo {
-  padding-left: 70px;
+  padding-left: 9%;
   padding-top: 45px;
 }
 body .wrapper .header_navigation ul {
-  padding: 0 62px;
+  padding: 45px 62px;
   text-align: center;
   list-style-type: none;
-  padding-top: 45px;
+}
+@media (max-width: 1860px) {
+  body .wrapper .header_navigation ul {
+    padding: 45px 15.5px;
+  }
+}
+@media (max-width: 900px) {
+  body .wrapper .header_navigation ul {
+    display: none;
+  }
 }
 body .wrapper .header_navigation ul li {
   display: inline;
@@ -54,13 +64,33 @@ body .wrapper .header_navigation ul li a:hover {
 body .wrapper .header_navigation ul li:last-child {
   padding-right: 0;
 }
+@media (max-width: 1600px) {
+  body .wrapper .header_navigation ul li {
+    padding-right: 20px;
+  }
+}
+@media (max-width: 1400px) {
+  body .wrapper .header_navigation ul li {
+    font-size: 12px;
+  }
+}
+@media (max-width: 1200px) {
+  body .wrapper .header_navigation ul li {
+    padding-right: 13.3333333333px;
+  }
+}
+@media (max-width: 1024px) {
+  body .wrapper .header_navigation ul li {
+    font-size: 10px;
+  }
+}
 body .wrapper .header_search-menu img {
   float: right;
-  margin-right: 70px;
+  margin-right: 9%;
   margin-top: 45px;
 }
 body .wrapper .header_search-menu img:last-child {
-  margin-right: 35px;
+  margin-right: 4.5%;
 }
 body .wrapper .header_search-menu img:hover {
   background-color: red;
@@ -78,9 +108,28 @@ body .wrapper .main :nth-child(5) {
 body .wrapper .main div:nth-child(-n+3) {
   border-bottom: 1px solid #9e9d9d;
 }
+body .wrapper .main div:nth-child(even):hover {
+  background-color: red;
+  opacity: 0.3;
+}
+body .wrapper .main div:nth-child(odd):hover {
+  background-color: blue;
+  opacity: 0.3;
+}
 body .wrapper .main div h3 {
-  margin-left: 70px;
+  margin-left: 9%;
   margin-top: 100px;
+}
+@media (max-width: 840px) {
+  body .wrapper .main div h3 {
+    font-size: 12px;
+  }
+}
+@media (max-width: 740px) {
+  body .wrapper .main div h3 {
+    text-align: center;
+    margin-left: 0;
+  }
 }
 body .wrapper .footer {
   display: grid;
@@ -94,11 +143,29 @@ body .wrapper .footer :nth-child(2) {
 body .wrapper .footer div p {
   opacity: 0.3;
   margin-top: 190px;
-  margin-left: 70px;
+  margin-left: 9%;
+}
+@media (max-width: 740px) {
+  body .wrapper .footer div p {
+    margin-left: 3%;
+    font-size: 10px;
+  }
 }
 body .wrapper .footer div:last-child p {
   float: right;
-  margin-right: 60px;
+  margin-right: 9%;
+}
+@media (max-width: 740px) {
+  body .wrapper .footer div:last-child p {
+    margin-right: 3%;
+  }
+}
+@media (max-width: 320px) {
+  body .wrapper {
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(8, 1fr);
+    display: none;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
