--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ body .wrapper .header_navigation ul li a {
   text-decoration: none;
 }
 body .wrapper .header_navigation ul li a:hover {
-  color: red;
+  color: #ff8686;
 }
 body .wrapper .header_navigation ul li:last-child {
   padding-right: 0;
@@ -93,7 +93,7 @@ body .wrapper .header_search-menu img:last-child {
   margin-right: 4.5%;
 }
 body .wrapper .header_search-menu img:hover {
-  background-color: red;
+  background-color: #ff8686;
 }
 body .wrapper .header_mobile {
   display: none;
@@ -112,7 +112,7 @@ body .wrapper .main div:nth-child(-n+3) {
   border-bottom: 1px solid #9e9d9d;
 }
 body .wrapper .main div:nth-child(even):hover {
-  background-color: red;
+  background-color: #ff8686;
   opacity: 0.3;
 }
 body .wrapper .main div:nth-child(odd):hover {
@@ -163,6 +163,9 @@ body .wrapper .footer div:last-child p {
     margin-right: 3%;
   }
 }
+body .wrapper .footer .footer-mobile div {
+  display: none;
+}
 @media (max-width: 320px) {
   body .wrapper {
     grid-template-columns: 1fr;
@@ -170,23 +173,40 @@ body .wrapper .footer div:last-child p {
     background-image: none;
     background-color: white;
     max-height: 100%;
+    max-width: 100vw;
+    width: 100%;
   }
   body .wrapper .header {
+    grid-template-columns: 1fr;
     background-image: url("assets/img/pattern.jpg");
     background-size: 100% 100%;
-    display: none;
   }
   body .wrapper .header div,
 body .wrapper .header nav {
     display: none;
   }
   body .wrapper .header div:last-child {
-    display: grid;
+    display: block;
+    position: relative;
+  }
+  body .wrapper .header div:last-child img {
+    position: absolute;
+  }
+  body .wrapper .header div:last-child img:hover {
+    background-color: #ff8686;
+  }
+  body .wrapper .header div:last-child img:nth-child(2) {
+    right: 0;
+  }
+  body .wrapper .header div:last-child img:last-child {
+    bottom: 0;
+    display: block;
+    left: 50%;
+    margin-left: -28px;
   }
   body .wrapper .main {
     grid-template-columns: 1fr;
     grid-template-rows: repeat(6, 240px);
-    display: none;
   }
   body .wrapper .main div:nth-child(-n+6) {
     border: none;
@@ -199,9 +219,34 @@ body .wrapper .header nav {
   }
   body .wrapper .footer {
     grid-template-columns: 1fr;
+    border: 1px solid #9e9d9d;
   }
-  body .wrapper .footer div:nth-child(-n+3) {
+  body .wrapper .footer :nth-child(2) {
+    border: none;
+  }
+  body .wrapper .footer div:first-child,
+body .wrapper .footer div:last-child {
     display: none;
+  }
+  body .wrapper .footer .footer-mobile {
+    grid-template-rows: repeat(2, 1fr);
+    color: black;
+  }
+  body .wrapper .footer .footer-mobile div {
+    display: grid;
+    height: 120px;
+  }
+  body .wrapper .footer .footer-mobile div p {
+    margin: auto auto;
+    padding: 0;
+    opacity: 0.8;
+  }
+  body .wrapper .footer .footer-mobile div p:hover {
+    opacity: 1;
+  }
+  body .wrapper .footer .footer-mobile div a {
+    text-decoration: none;
+    color: black;
   }
 }
 
