--- a/style.scss
+++ b/style.scss
@@ -8,7 +8,7 @@ $SearchMenuPaddingRight: 60px;
 $contentHeaderPaddingTop: 45px;
 $mainPaddingText: 100px;
 $textColor: white;
-$hoverColor: red;
+$hoverColor: rgb(255, 134, 134);
 $hoverColorOdd: blue;
 $footerTextMarginTop: 190px;
 $opacity: 0.3;
@@ -163,6 +163,9 @@ body {
           margin-right: $logoMenuTextPaddingLeftRight/3;
         }
       }
+      .footer-mobile div {
+        display: none;
+      }
     }
     @media (max-width: 320px) {
       grid-template-columns: 1fr;
@@ -170,22 +173,41 @@ body {
       background-image: none;
       background-color: white;
       max-height: 100%;
+      max-width: 100vw;
+      width: 100%;
+
       .header {
+        grid-template-columns: 1fr;
         background-image: url("assets/img/pattern.jpg");
         background-size: 100% 100%;
-        display: none;
       }
       .header div,
       .header nav {
         display: none;
       }
       .header div:last-child {
-        display: grid;
+        display: block;
+        position: relative;
+        img {
+          position: absolute;
+          &:hover {
+            background-color: $hoverColor;
+          }
+        }
+        img:nth-child(2) {
+          right: 0;
+        }
+        img:last-child {
+          bottom: 0;
+          display: block;
+          left: 50%;
+          margin-left: -28px;
+        }
       }
       .main {
         grid-template-columns: 1fr;
         grid-template-rows: repeat(6, $mobileHeight);
-        display: none;
+        // display: none;
         div:nth-child(-n + 6) {
           border: none;
         }
@@ -198,8 +220,33 @@ body {
       }
       .footer {
         grid-template-columns: 1fr;
-        div:nth-child(-n + 3) {
+        border: 1px solid $borderBlocks;
+        :nth-child(2) {
+          border: none;
+        }
+        div:first-child,
+        div:last-child {
           display: none;
+        }
+        .footer-mobile {
+          grid-template-rows: repeat(2, 1fr);
+          color: black;
+        }
+        .footer-mobile div {
+          display: grid;
+          height: $mobileHeight/2;
+        }
+        .footer-mobile div p {
+          margin: auto auto;
+          padding: 0;
+          opacity: 0.8;
+          &:hover {
+            opacity: 1;
+          }
+        }
+        .footer-mobile div a {
+          text-decoration: none;
+          color: black;
         }
       }
     }
