--- a/style.scss
+++ b/style.scss
@@ -24,6 +24,11 @@ $mobileHeight: 240px;
 body {
   background-color: $backgroundBody;
   color: $textColor;
+  .h1 {
+    width: 1px;
+    height: 1px;
+    opacity: 0;
+  }
   .wrapper {
     display: grid;
     grid-template-rows: 1fr 2fr 1fr;
@@ -175,7 +180,6 @@ body {
       max-height: 100%;
       max-width: 100vw;
       width: 100%;
-
       .header {
         grid-template-columns: 1fr;
         background-image: url("assets/img/pattern.jpg");
@@ -249,6 +253,11 @@ body {
           color: black;
         }
       }
+    }
+  }
+  @media (max-width: 320px) {
+    .h1 {
+      display: none;
     }
   }
 }
