--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  background-color: white;
+  background-color: 7a7a7a;
   color: white;
 }
 body .h1 {
@@ -22,10 +22,23 @@ body .wrapper {
   width: 100vw;
   max-height: 940px;
   height: 100vh;
-  background-color: #7a7a7a;
   margin: 0 auto;
+  background-color: #ffa4a4;
   background-image: url("assets/img/pattern.jpg");
   background-size: 100% 100%;
+}
+body .wrapper .menu {
+  position: absolute;
+  display: none;
+  grid-template-rows: 24px 24px 1fr;
+  justify-self: end;
+  width: 33.3%;
+  height: 100%;
+  background: #d6d6d6;
+  color: black;
+}
+body .wrapper .menu .menu_close-menu {
+  width: 15%;
 }
 body .wrapper .header {
   display: grid;
