--- a/style.scss
+++ b/style.scss
@@ -55,6 +55,21 @@ body {
         width: 15%;
       }
     }
+    .search-container {
+      position: absolute;
+      display: grid;
+      grid-template-rows: 24px 24px 1fr;
+      justify-self: end;
+      width: 100%;
+      height: 100%;
+      background: $backgroundMenu;
+      color: black;
+      justify-content: end;
+      .close-search {
+        justify-self: end;
+        width: 25%;
+      }
+    }
     .header {
       display: grid;
       grid-template-columns: repeat(3, 1fr);
