--- a/style.scss
+++ b/style.scss
@@ -57,7 +57,7 @@ body {
     }
     .search-container {
       position: absolute;
-      display: grid;
+      display: none;
       grid-template-rows: 24px 24px 1fr;
       justify-self: end;
       width: 100%;
